# stargate

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  justfile
.cargo/: audit.toml
.github/workflows/: release.yml
crates/stargate-app/: Cargo.toml
crates/stargate-app/src/: lib.rs  main.rs
crates/stargate-core/: Cargo.toml
crates/stargate-core/src/: config.rs  error.rs  lib.rs  model.rs
crates/stargate-gateway/: Cargo.toml
crates/stargate-gateway/src/: admin.rs  auth.rs  lib.rs  outbound.rs  session_registry.rs  ssh.rs  webssh.rs
crates/stargate-gateway/tests/: e2e.rs
crates/stargate-store-sqlite/: Cargo.toml
crates/stargate-store-sqlite/migrations/: 0001_routes.sql  0002_routes_v2.sql  0003_routes_v3.sql
crates/stargate-store-sqlite/src/: lib.rs
deploy/: stargate.toml.example
deploy/cloudflared/: admin-tunnel.yml  web-tunnel.yml
deploy/systemd/: stargate.service
