[workspace]
members = [
    "crates/stargate-core",
    "crates/stargate-store-sqlite",
    "crates/stargate-gateway",
    "crates/stargate-app",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.94"

[workspace.dependencies]
anyhow = "=1.0.102"
axum = { version = "=0.8.8", features = ["http1", "json", "macros", "tokio", "ws"] }
base64 = "=0.22.1"
bytes = "=1.11.1"
clap = { version = "=4.6.0", features = ["derive", "env"] }
dashmap = "=6.1.0"
futures-util = "=0.3.32"
http = "=1.4.0"
jsonwebtoken = { version = "=10.3.0", features = ["rust_crypto"] }
portable-pty = "=0.9.0"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
russh = "=0.57.1"
sd-notify = "=0.4.5"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sqlx = { version = "=0.8.6", default-features = false, features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite", "time", "uuid"] }
tempfile = "=3.27.0"
thiserror = "=2.0.18"
time = { version = "=0.3.47", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "=1.50.0", features = ["full"] }
tokio-tungstenite = { version = "=0.28.0", features = ["rustls-tls-native-roots"] }
tokio-util = "=0.7.18"
toml = "=0.9.12"
tower = "=0.5.3"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt", "json"] }
url = { version = "=2.5.8", features = ["serde"] }
uuid = { version = "=1.22.0", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
