[package]
name = "stargate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
russh.workspace = true
sd-notify.workspace = true
serde.workspace = true
stargate-core = { path = "../stargate-core" }
stargate-gateway = { path = "../stargate-gateway" }
stargate-store-sqlite = { path = "../stargate-store-sqlite" }
time.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[lints]
workspace = true
