[package]
name = "stargate-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
dashmap.workspace = true
futures-util.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
portable-pty.workspace = true
reqwest.workspace = true
russh.workspace = true
serde.workspace = true
serde_json.workspace = true
stargate-core = { path = "../stargate-core" }
stargate-store-sqlite = { path = "../stargate-store-sqlite" }
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
jsonwebtoken.workspace = true
reqwest.workspace = true
time.workspace = true
tokio-tungstenite.workspace = true

[lints]
workspace = true
