[package]
name = "stargate-store-sqlite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
sqlx.workspace = true
stargate-core = { path = "../stargate-core" }
time.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
